--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@nuware/emitter",
   "version": "0.1.16",
   "description": "Event Emitter",
-  "main": "dist/emitter.umd.js",
+  "main": "dist/emitter.cjs.js",
   "module": "dist/emitter.esm.js",
+  "browser": "dist/emitter.umd.js",
+  "minimized": "dist/emitter.umd.min.js",
   "files": [
     "dist"
   ],
@@ -23,19 +25,20 @@
     "url": "https://github.com/nuware/emitter/issues"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "rollup": "^0.66.5",
-    "rollup-plugin-minify-es": "^1.1.1",
-    "rollup-plugin-node-resolve": "^3.4.0"
+    "rollup": "^0.67.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-terser": "^3.0.0"
   },
   "dependencies": {
-    "@nuware/functions": "^0.1.16",
-    "@nuware/lenses": "^0.1.12"
+    "@nuware/functions": "^0.1.18",
+    "@nuware/lenses": "^0.1.14"
   },
   "eslintConfig": {
     "extends": "standard",
